[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "httpx-whackamole"
version = "1.1.0"
description = "Policy-based error handling for httpx HTTP operations"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Martin Mahner", email = "martin@elephant.house"},
]
keywords = ["httpx", "error-handling", "http", "api", "client", "resilience"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx",
]

[project.urls]
Homepage = "https://github.com/bartTC/httpx-whackamole"
Repository = "https://github.com/bartTC/httpx-whackamole"
Documentation = "https://barttc.github.io/httpx-whackamole/"
Issues = "https://github.com/bartTC/httpx-whackamole/issues"
Changelog = "https://github.com/bartTC/httpx-whackamole/blob/main/CHANGELOG.md"
"Source Code" = "https://github.com/bartTC/httpx-whackamole"
PyPI = "https://pypi.org/project/httpx-whackamole/"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-httpx>=0.35.0",
]

[tool.pytest.ini_options]
testpaths = ["tests.py"]

[tool.ruff]
target-version = "py39"
lint.select = ["ALL"]
lint.ignore = [
    # Valid exclusions.
    "COM812", # Conflicts with ruff format
    "D203", # incorrect-blank-line-before-class (conflicts with D211)
    "D401", # First line of docstring should be in imperative mood: "Always report to Sentry with full context."
    "D212", # Don't require summary on first line
    "E501", # Line too long (>88)
    "ERA001", # Found commented-out code
    "FBT", # Flake Boolean Trap (don't use arg=True in functions)
    "FIX", # Line contains TODO/FIXME. Consider resolving.
    "PYI034", # __enter__ should return Self (requires typing_extensions for Python <3.11)

]

[tool.ruff.lint.extend-per-file-ignores]
"tests.py" = [
    "S101", # Use of `assert` detected
    "PLR2004", # Magic value used in comparison, consider replacing <int> with a constant variable
    "PT012", # `pytest.raises()` block should contain a single simple statement
]

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["whackamole.py"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true
